[package]
name = "channelserver"
version = "1.0.0"
license = "MPL-2.0"
authors = [
    "jr conlin<src+pairsona@jrconlin.com",
    "Phil Jenvey <pjenvey@underboss.org",
    "Donovan Preston <donovanpreston@gmail.com>"
    ]
edition = "2018"

[dependencies]
base64 = "0.13"
config = "0.11"
failure = "0.1"
rand = "0.8"
bytes = "1.0"
byteorder = "1.3"
futures = "0.3"
tokio-io = "0.1"
tokio-core = "0.1"
env_logger = "0.8"

uuid = { version = "0.8", features = ["serde", "v4"] }

cadence = "0.25"
slog = {version="2.5", features=["release_max_level_debug"]}
slog-async = "2.5.0"
slog-json = "2.3.0"
slog-scope = "4.3"
slog-stdlog = "4.0"
slog-term = "2.6"
slog-mozlog-json = "0.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

actix-rt = "1.1"
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-files = "0.2"

reqwest = "0.11"
openssl = "0.10"

maxminddb = "0.17"
ipnet = "2.2"

#vuln
http = "^0.2"
memoffset = "0.6"
smallvec = "^1"
