[package]
name = "pairsona_spake2"
version = "0.0.1"
authors = ["Ryan Kelly <rfkelly@mozilla.com"]

[lib]
crate-type = ["cdylib"]

[dependencies]
stdweb = "0.4.7"
spake2 = "0.0.8"
rand = "0.5.3"
hex = "0.3.1"
serde = "1"
serde_json = "1"
serde_derive = "1"
clear_on_drop = "0.2.3"
lazy_static = "1.0.1"

[features]
default = ["rand/stdweb", "clear_on_drop/no_cc"]
